fix: updated config template for cassandra host

--- a/charts/qubership-jaeger/templates/query/configmap-config.yaml
+++ b/charts/qubership-jaeger/templates/query/configmap-config.yaml
@@ -100,12 +100,10 @@ data:
                 servers:
                   {{- if .Values.cassandraSchemaJob.host }}
                   - {{ .Values.cassandraSchemaJob.host -}}
-                  {{- else }}
-                  {{- if .Values.INFRA_CASSANDRA_HOST -}}
+                  {{- else if .Values.INFRA_CASSANDRA_HOST }}
                   - {{ .Values.INFRA_CASSANDRA_HOST -}}
-                  {{- else -}}
+                  {{- else }}
                   - cassandra.cassandra.svc
-                  {{- end -}}
                   {{- end }}
                 port: {{ if .Values.cassandraSchemaJob.port}}{{.Values.cassandraSchemaJob.port}}{{ else }}{{ if .Values.INFRA_CASSANDRA_PORT }}{{ .Values.INFRA_CASSANDRA_PORT }}{{ else}} 9042{{ end }}{{ end }}
                 tls:
