--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -3,9 +3,13 @@
 # name=value
 
 GITLEAKS_LOG_LEVEL=warn
+VALIDATE_BIOME_FORMAT=false
+VALIDATE_BIOME_LINT=false
+VALIDATE_GITHUB_ACTIONS_ZIZMOR=false
 VALIDATE_JAVASCRIPT_PRETTIER=false
 VALIDATE_JSON_PRETTIER=false
 VALIDATE_MARKDOWN_PRETTIER=false
+VALIDATE_TRIVY=false
 VALIDATE_YAML_PRETTIER=false
 
 # TODO: fix python files and enable the check again
