--- a/readiness-probe/sonar-project.properties
+++ b/readiness-probe/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/*_mock.go,**/mock/*.go,commitlint.config.js
+sonar.exclusions=**/*_test.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.go.coverage.reportPaths=coverage.out
 sonar.language=go
 sonar.sourceEncoding=UTF-8
