chore(ci): fix linter issues

--- a/docs/examples/query/query-custom-config-values.yaml
+++ b/docs/examples/query/query-custom-config-values.yaml
@@ -62,10 +62,10 @@ query:
     receivers:
       jaeger:
         protocols:
-          thrift_binary:
-          thrift_compact:
-          thrift_http:
+          thrift_binary: ~
+          thrift_compact: ~
+          thrift_http: ~
     processors:
-      batch:
+      batch: ~
     exporters:
-      debug:
+      debug: ~
