--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Check if tag exists
         id: check_tag
-        uses: netcracker/qubership-workflow-hub/actions/tag-action@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+        uses: netcracker/qubership-workflow-hub/actions/tag-action@v1.0.6
         with:
           ref: ${{ github.ref }}
           check-tag: 'true'
@@ -71,18 +71,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Change Chart Version Action
-      uses: netcracker/qubership-workflow-hub/actions/chart-version@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+      uses: netcracker/qubership-workflow-hub/actions/chart-version@v1.0.6
       with:
         new-chart-version: ${{ github.event.inputs.version }}
         chart-yaml-path: ${{ github.event.inputs.path-to-chart }}
 
     - name: Run Commit and Push Action
-      uses: Netcracker/qubership-workflow-hub/actions/commit-and-push@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+      uses: Netcracker/qubership-workflow-hub/actions/commit-and-push@v1.0.6
       with:
         commit_message: "Update chart version to v${{ github.event.inputs.version }}"
 
     - name: "Create release tag"
-      uses: netcracker/qubership-workflow-hub/actions/tag-action@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+      uses: netcracker/qubership-workflow-hub/actions/tag-action@v1.0.6
       with:
         ref: ${{ github.ref }}
         check-tag: 'false'
@@ -102,7 +102,7 @@ jobs:
     steps:
     - name: "Docker Build"
       id: docker_build
-      uses: netcracker/qubership-workflow-hub/actions/docker-action@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+      uses: netcracker/qubership-workflow-hub/actions/docker-action@v1.0.6
       with:
         ref: v${{ inputs.version }}
         download-artifact: false
@@ -114,7 +114,7 @@ jobs:
 
   github-release:
     needs: [docker-build]
-    uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+    uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@v1.0.6
     with:
       version: ${{ github.event.inputs.version }}
       publish: false
@@ -127,7 +127,7 @@ jobs:
       uses: actions/checkout@v6.0.0
 
     - name: Archive and Upload Assets
-      uses: netcracker/qubership-workflow-hub/actions/archive-and-upload-assets@3e428f45132119ce49d90f3770a45d4fe1d1078d # v2.0.4
+      uses: netcracker/qubership-workflow-hub/actions/archive-and-upload-assets@v1.0.6
       with:
         config-path: './.github/assets-config.yml'
         dist-path: './dist'
