--- a/charts/qubership-jaeger/templates/collector/deployment.yaml
+++ b/charts/qubership-jaeger/templates/collector/deployment.yaml
@@ -96,12 +96,12 @@ spec:
             {{- end }}
           {{- if .Values.readinessProbe.install }}
           livenessProbe:
-            failureThreshold: 1
+            failureThreshold: 3
             httpGet:
               path: /health
               port: 8080
               scheme: HTTP
-            initialDelaySeconds: 1
+            initialDelaySeconds: 15
             periodSeconds: {{ .Values.readinessProbe.periodSeconds | default 10 }}
             successThreshold: 1
             timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds | default 5 }}
@@ -180,9 +180,9 @@ spec:
             - containerPort: 8080
               protocol: TCP
           livenessProbe:
-            failureThreshold: 1
+            failureThreshold: 3
             httpGet:
-              path: /health
+              path: /livez
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 5
