--- a/charts/qubership-jaeger/templates/collector/service.yaml
+++ b/charts/qubership-jaeger/templates/collector/service.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/name: {{ .Values.jaeger.serviceName }}-collector
     app.kubernetes.io/instance: {{ cat .Values.jaeger.serviceName "-collector-" .Release.Namespace | nospace | trunc 63 | trimSuffix "-" }}
     app.kubernetes.io/component: collector
+    app.kubernetes.io/managed-by: Helm
     {{- include "jaeger.commonLabels" . | nindent 4 }}
     {{- if .Values.collector.labels }}
       {{- toYaml .Values.collector.labels | nindent 4 }}
