--- a/charts/qubership-jaeger/templates/collector/deployment.yaml
+++ b/charts/qubership-jaeger/templates/collector/deployment.yaml
@@ -43,6 +43,7 @@ spec:
         app.kubernetes.io/name: {{ .Values.jaeger.serviceName }}-collector
         app.kubernetes.io/instance: {{ cat .Values.jaeger.serviceName "-collector-" .Release.Namespace | nospace | trunc 63 | trimSuffix "-" }}
         app.kubernetes.io/component: collector
+        app.kubernetes.io/technology: go
         {{- include "jaeger.commonLabels" . | nindent 8 }}
         {{- if .Values.collector.labels }}
         {{- toYaml .Values.collector.labels | nindent 8 }}
