--- a/charts/qubership-jaeger/templates/query/deployment.yaml
+++ b/charts/qubership-jaeger/templates/query/deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/name: {{ .Values.jaeger.serviceName }}-query
     app.kubernetes.io/instance: {{ cat .Values.jaeger.serviceName "-query-" .Release.Namespace | nospace | trunc 63 | trimSuffix "-" }}
     app.kubernetes.io/component: query
+    app.kubernetes.io/technology: go
     {{- include "jaeger.commonLabels" . | nindent 4 }}
     {{- if .Values.query.labels }}
       {{- toYaml .Values.query.labels | nindent 4 }}
@@ -37,6 +38,7 @@ spec:
         app.kubernetes.io/name: {{ .Values.jaeger.serviceName }}-query
         app.kubernetes.io/instance: {{ cat .Values.jaeger.serviceName "-query-" .Release.Namespace | nospace | trunc 63 | trimSuffix "-" }}
         app.kubernetes.io/component: query
+        app.kubernetes.io/technology: go
         {{- include "jaeger.commonLabels" . | nindent 8 }}
         app.kubernetes.io/managed-by: Helm
         {{- if .Values.query.labels }}
