--- a/docs/examples/collector/collector-default-config-values.yaml
+++ b/docs/examples/collector/collector-default-config-values.yaml
@@ -29,6 +29,20 @@ collector:
       telemetry:
         logs:
           level: debug
+    processors:
+      memory_limiter:
+        # Enable memory limiter to prevent OOM issues
+        enabled: false
+        check_interval: 1s
+        # Hard memory limit in MiB. When exceeded, garbage collection is triggered
+        # Should be set to approximately 75-80% of pod memory limit
+        # Default collector memory limit is 200Mi, so default is 150Mi (75% of 200Mi)
+        limit_mib: 150
+        # Allowed memory spike in MiB. Soft limit = limit_mib - spike_limit_mib
+        # When soft limit is exceeded, processor starts rejecting incoming data
+        # Should be set to approximately 15-20% of pod memory limit
+        # Default collector memory limit is 200Mi, so default is 30Mi (15% of 200Mi)
+        spike_limit_mib: 30
     exporters:
       jaeger_storage_exporter:
         # Retry configuration to save data in database
