--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,11 +2,19 @@
 name: Test qubership-jaeger installation
 
 on:
-  workflow_run:
-    workflows: ["Build Docker with Matrix Strategy"]
-    types:
-    - completed
   workflow_dispatch: {}
+  push:
+    branches: [main]
+    paths:
+    - '**'
+    - '!.github/**'
+    - '.github/workflows/integration-tests.yaml'
+    - '!docs/**'
+    - '!CODE-OF-CONDUCT.md'
+    - '!CONTRIBUTING.md'
+    - '!LICENSE'
+    - '!README.md'
+    - '!SECURITY.md'
   pull_request:
     branches:
     - main
@@ -29,7 +37,6 @@ env:
   namespace: jaeger
   max_attempts: 50
   delay: 10
-  status_provisioner_tag: 0.2.3
 
 jobs:
   Run-Integration-Tests:
@@ -190,8 +197,7 @@ jobs:
           --set "cassandraSchemaJob.password=$CASSANDRA_PASSWORD" --set cassandraSchemaJob.datacenter=dc1\
           --set "readinessProbe.image=ghcr.io/netcracker/jaeger-readiness-probe:$TAG" \
           --set "integrationTests.install=true" \
-          --set "integrationTests.image=ghcr.io/netcracker/jaeger-integration-tests:$TAG" \
-          --set "statusProvisioner.image=ghcr.io/netcracker/qubership-deployment-status-provisioner:${{ env.status_provisioner_tag }}"
+          --set "integrationTests.image=ghcr.io/netcracker/jaeger-integration-tests:$TAG"
       shell: bash
 
     - name: Check installation status
