chore: correct deployment status provisioner tag (#242)
* chore: correct deployment status provisioner tag

* chore: correct triggers in docker-dev workflow

* chore: correct jaeger install parameters for int tests workflow

* chore: correct triggers for docker-dev and integration-tests workflow

* chore: set version of deployment-status-provisioner to 0.2.4

--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -1,18 +1,37 @@
 name: Build Docker with Matrix Strategy
 run-name: "Image for ${{ github.event.repository.name }}: ${{ github.run_number }} - ${{ github.actor }}"
 on:
+  push:
+    branches:
+    - '**'
+    paths:
+    - '**'
+    - '!.github/**'
+    - '.github/workflows/integration-tests.yaml'
+    - '.github/workflows/build.yaml'
+    - '!docs/**'
+    - '!CODE-OF-CONDUCT.md'
+    - '!CONTRIBUTING.md'
+    - '!LICENSE'
+    - '!README.md'
+    - '!SECURITY.md'
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
     - main
-    paths-ignore:
-    - '.github/**'
-    - 'docs/**'
-    - 'CODE-OF-CONDUCT.md'
-    - 'CONTRIBUTING.md'
-    - 'LICENSE'
-    - 'README.md'
-    - 'SECURITY.md'
+    paths:
+    - '**'
+    - '!.github/**'
+    - '.github/workflows/integration-tests.yml'
+    - '.github/workflows/docker-dev.yml'
+    - '!.git*'
+    - '!.*ignore'
+    - '!docs/**'
+    - '!CODE-OF-CONDUCT.md'
+    - '!CONTRIBUTING.md'
+    - '!LICENSE'
+    - '!README.md'
+    - '!SECURITY.md'
   workflow_dispatch:
     inputs:
       tags:
