--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,24 +2,34 @@
 name: Test qubership-jaeger installation
 
 on:
-  workflow_run:
-    workflows: ["Build Docker with Matrix Strategy"]
-    types:
-    - completed
   workflow_dispatch: {}
+  push:
+    branches: [main]
+    paths:
+    - '**'
+    - '!.github/**'
+    - '.github/workflows/integration-tests.yaml'
+    - '!docs/**'
+    - '!CODE-OF-CONDUCT.md'
+    - '!CONTRIBUTING.md'
+    - '!LICENSE'
+    - '!README.md'
+    - '!SECURITY.md'
   pull_request:
     branches:
     - main
-    paths-ignore:
-    - '.github/**'
-    - '.git*'
-    - '.*ignore'
-    - 'docs/**'
-    - 'CODE-OF-CONDUCT.md'
-    - 'CONTRIBUTING.md'
-    - 'LICENSE'
-    - 'README.md'
-    - 'SECURITY.md'
+    paths:
+    - '**'
+    - '!.github/**'
+    - '.github/workflows/integration-tests.yml'
+    - '!.git*'
+    - '!.*ignore'
+    - '!docs/**'
+    - '!CODE-OF-CONDUCT.md'
+    - '!CONTRIBUTING.md'
+    - '!LICENSE'
+    - '!README.md'
+    - '!SECURITY.md'
 
 env:
   kind_version: v0.27.0
