chore: correct integration-tests workflow

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -126,8 +126,10 @@ jobs:
         metadata:
           name: cassandra
         spec:
+          stargate:
+            enabled: false
           cassandra:
-            serverVersion: "4.0.1"
+            serverVersion: "4.0.4"
             datacenters:
               - metadata:
                   name: dc1
@@ -149,6 +151,8 @@ jobs:
     - name: Check k8ssandra cluster status
       id: check_k8ssandra_status
       run: |
+        kubectl delete pod -l app.kubernetes.io/name=k8ssandra-operator -n ${{ env.cassandra_namespace }} --force --grace-period=0 && kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=k8ssandra-operator -n ${{ env.cassandra_namespace }}
+        kubectl delete pod -l app.kubernetes.io/name=cass-operator -n ${{ env.cassandra_namespace }} --force --grace-period=0 && kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=cass-operator -n ${{ env.cassandra_namespace }}
         attempt=1
         max_attempts=${{ env.max_attempts }}
         while [[ $attempt -le $max_attempts ]]; do
