--- a/charts/qubership-jaeger/templates/collector/configmap-config.yaml
+++ b/charts/qubership-jaeger/templates/collector/configmap-config.yaml
@@ -31,7 +31,7 @@ data:
       pipelines:
         traces:
           receivers: [otlp, jaeger, zipkin]
-          processors: {{ if .Values.collector.config.processors.memory_limiter.enabled }}[memory_limiter, batch]{{ else }}[batch]{{- end }}
+          processors: {{ if eq (include "collector.memoryLimiterEnabled" .) "true" }}[memory_limiter, batch]{{ else }}[batch]{{- end }}
           exporters: [jaeger_storage_exporter]
       telemetry:
         resource:
@@ -334,7 +334,7 @@ data:
           {{- end }}
         {{- end }}
     processors:
-      {{- if .Values.collector.config.processors.memory_limiter.enabled }}
+      {{- if eq (include "collector.memoryLimiterEnabled" .) "true" }}
       memory_limiter:
         check_interval: {{ .Values.collector.config.processors.memory_limiter.check_interval | default "1s" }}
         limit_mib: {{ .Values.collector.config.processors.memory_limiter.limit_mib | default 4000 }}
