--- a/charts/qubership-jaeger/templates/integration-tests/job.yaml
+++ b/charts/qubership-jaeger/templates/integration-tests/job.yaml
@@ -1,9 +1,9 @@
 {{- if .Values.integrationTests.install }}
 ---
-kind: Deployment
-apiVersion: apps/v1
+kind: Job
+apiVersion: batch/v1
 metadata:
-  name: {{ .Values.integrationTests.service.name }}
+  name: {{ .Values.integrationTests.service.name }}-{{ .Release.Revision }}
   labels:
     name: {{ .Values.integrationTests.service.name }}
     app.kubernetes.io/name: {{ .Values.integrationTests.service.name }}
@@ -11,17 +11,13 @@ metadata:
     app.kubernetes.io/component: jaeger-integration-tests
     app.kubernetes.io/part-of: jaeger
     app.kubernetes.io/version: {{ .Chart.AppVersion }}
-  annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
-    "helm.sh/hook-weight": "-4"
 spec:
-  selector:
-    matchLabels:
-      name: {{ .Values.integrationTests.service.name }}
-  strategy:
-    type: RollingUpdate
-  replicas: 1
+  {{- if .Values.integrationTests.ttlSecondsAfterFinished }}
+  ttlSecondsAfterFinished: {{ .Values.integrationTests.ttlSecondsAfterFinished }}
+  {{- end }}
+  completions: 1
+  parallelism: 1
+  backoffLimit: {{ .Values.integrationTests.backoffLimit | default 0 }}
   template:
     metadata:
       labels:
@@ -36,6 +32,7 @@ spec:
       securityContext:
         {{- include "integrationTests.securityContext" . }}
       serviceAccountName: {{ .Values.integrationTests.serviceAccount.name }}
+      restartPolicy: Never
       {{- if .Values.integrationTests.affinity }}
       affinity:
         {{- toYaml .Values.integrationTests.affinity | nindent 8 }}
@@ -46,6 +43,12 @@ spec:
       containers:
         - name: {{ .Values.integrationTests.service.name }}
           image: {{ template "jaeger-integration-tests.image" . }}
+          {{- if .Values.integrationTests.commandOverride }}
+          command: {{ toYaml .Values.integrationTests.commandOverride | nindent 12 }}
+          {{- end }}
+          {{- if .Values.integrationTests.argsOverride }}
+          args: {{ toYaml .Values.integrationTests.argsOverride | nindent 12 }}
+          {{- end }}
           ports:
             - containerPort: 8080
               protocol: TCP
@@ -79,7 +82,7 @@ spec:
             - name: output
               mountPath: /opt/robot/output
           terminationMessagePath: /dev/termination-log
-          imagePullPolicy: Always
+          imagePullPolicy: {{ .Values.integrationTests.imagePullPolicy | default "Always" }}
       volumes:
         - name: output
           emptyDir: {}
