fix: added override for github actions to keep the integration tests pod alive

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -205,6 +205,7 @@ jobs:
           --set "cassandraSchemaJob.password=$CASSANDRA_PASSWORD" --set cassandraSchemaJob.datacenter=dc1\
           --set "readinessProbe.image=ghcr.io/netcracker/jaeger-readiness-probe:$TAG" \
           --set "integrationTests.install=true" \
+          --set "integrationTests.hookDeletePolicy=before-hook-creation" \
           --set "statusProvisioner.integrationTestsTimeout=1200" \
           --set "integrationTests.image=ghcr.io/netcracker/jaeger-integration-tests:$TAG"
       shell: bash
