--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -123,62 +123,55 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
 
   github-release:
-    needs: [docker-build]
-    uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
-    with:
-      version: ${{ github.event.inputs.version }}
-      publish: false
-
-  fix-changelog:
     permissions:
       contents: write
-    needs: [github-release]
+    needs: [docker-build]
     runs-on: ubuntu-latest
-    if: startsWith(github.event.inputs.version, '0.')
     steps:
       - name: Checkout
         uses: actions/checkout@v6.0.0
         with:
           fetch-depth: 0
           fetch-tags: true
+          ref: ${{ github.ref }}
 
-      - name: Fix changelog compare URL
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO: ${{ github.repository }}
-          CURRENT: v${{ github.event.inputs.version }}
+      - name: Compute footer (Full Changelog link)
+        id: footer
+        shell: bash
         run: |
           set -e
-          # Use API for both fetch and update; gh release view/edit can skip drafts
-          fetch_release() { gh api "repos/${REPO}/releases/tags/${1}" 2>/dev/null || true; }
-          valid_release() { [ -n "$1" ] && [ "$(echo "$1" | jq -r '.id // "null"')" != "null" ]; }
-          json=""; release_id=""; body=""
-          for attempt in 1 2 3; do
-            json="$(fetch_release "$CURRENT")"
-            if valid_release "$json"; then break; fi
-            alt_tag="${{ github.event.inputs.version }}"
-            echo "Trying tag without v: $alt_tag"
-            json="$(fetch_release "$alt_tag")"
-            if valid_release "$json"; then CURRENT="$alt_tag"; break; fi
-            [ "$attempt" -lt 3 ] && echo "Draft not visible yet, retry $attempt/3 in 10s..." && sleep 10
-          done
-          release_id="$(echo "$json" | jq -r '.id')"
-          body="$(echo "$json" | jq -r '.body // empty')"
-          if [ -z "$body" ] || [ "$release_id" = "null" ]; then
-            echo "::warning::Draft release for v${{ github.event.inputs.version }} (tried with and without 'v') not found or empty after retries. Skipping changelog fix."
-            exit 0
-          fi
-          TAGS="$(git tag -l 'v0.*' | grep -v "^${CURRENT}$" || true)"
-          PREVIOUS="$( (echo "$TAGS"; echo "$CURRENT") | sort -V | grep -B1 "^${CURRENT}$" | head -1 || true)"
-          if [ -z "$PREVIOUS" ] || [ "$PREVIOUS" = "$CURRENT" ]; then
-            echo "::notice::No previous v0.x tag found, skipping changelog fix"
-            exit 0
-          fi
-          echo "Previous tag: $PREVIOUS"
-          fixed="$(printf '%s' "$body" | perl -pe "s|(compare/)(.*?)(\\.\\.\\.)|\1${PREVIOUS}\3|")"
-          printf '%s' "$fixed" > /tmp/release-notes.md
-          jq -n --rawfile b /tmp/release-notes.md '{body: $b}' | gh api -X PATCH "repos/${REPO}/releases/${release_id}" --input -
-          echo "Updated draft release changelog: compare/$PREVIOUS...$CURRENT"
+          VERSION="${{ github.event.inputs.version }}"
+          CURRENT="v${VERSION}"
+          REPO="${{ github.repository }}"
+          footer=""
+          case "$VERSION" in
+            0.*)
+              PREVIOUS=""
+              while IFS= read -r t; do
+                if [ "$t" = "$CURRENT" ]; then break; fi
+                PREVIOUS="$t"
+              done < <( (git tag -l 'v0.*'; echo "$CURRENT") | sort -V )
+              if [ -n "$PREVIOUS" ]; then
+                footer="$(printf '%s\n\n**Full Changelog**: https://github.com/%s/compare/%s...%s' '---' "$REPO" "$PREVIOUS" "$CURRENT")"
+                echo "Previous tag: $PREVIOUS"
+              fi
+              ;;
+          esac
+          echo "footer<<EOF" >> "$GITHUB_OUTPUT"
+          printf '%s\n' "$footer" >> "$GITHUB_OUTPUT"
+          echo "EOF" >> "$GITHUB_OUTPUT"
+
+      - name: Run Release Drafter
+        uses: netcracker/release-drafter@master
+        with:
+          config-name: release-drafter-config.yml
+          version: v${{ github.event.inputs.version }}
+          tag: v${{ github.event.inputs.version }}
+          publish: 'false'
+          latest: 'true'
+          footer: ${{ steps.footer.outputs.footer }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   upload-assets:
     needs: [github-release]
